--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@babel/core": ">=7.0.0 <8.0.0",
+    "@emotion/react": "^11.10.5",
+    "@mantine/core": "^5.8.3",
+    "@mantine/hooks": "^5.8.3",
     "@togglecorp/fujs": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
