--- a/package.json
+++ b/package.json
@@ -12,26 +12,36 @@
     "lint:fix": "eslint app --ext .js,.jsx,.ts,.tsx --fix",
     "typecheck": "tsc",
     "stylelint": "stylelint --cache --fix --ignore-path .gitignore **/*.css",
-    "test": "vitest"
+    "test": "vitest",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
     "@babel/core": ">=7.0.0 <8.0.0",
     "@emotion/react": "^11.10.5",
+    "@graphql-typed-document-node/core": "^3.1.1",
     "@mantine/core": "^5.8.3",
     "@mantine/hooks": "^5.8.3",
     "@togglecorp/fujs": "^1.9.3",
+    "@urql/devtools": "^2.0.3",
+    "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
+    "urql": "^3.0.3",
     "vite-plugin-imagemin": "^0.6.1",
     "vite-plugin-svgr": "^2.2.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.15.0",
+    "@graphql-codegen/client-preset": "1.2.0",
+    "@graphql-eslint/eslint-plugin": "^3.13.1",
+    "@types/node": "^18.11.10",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
+    "@urql/core": "^3.0.5",
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.11",
     "browserslist": "^4.21.4",
@@ -52,7 +62,8 @@
     "stylelint": "^14.12.0",
     "stylelint-config-concentric-order": "^5.1.0",
     "stylelint-config-recommended": "^9.0.0",
-    "typescript": "^4.6.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.3",
     "vite": "^3.1.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-pwa": "^0.12.8",
