--- a/package.json
+++ b/package.json
@@ -5,18 +5,15 @@
   "type": "module",
   "packageManager": "pnpm@7.12.1",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "pnpm codegen && vite",
+    "build": "pnpm codegen && tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint app --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint app --ext .js,.jsx,.ts,.tsx --fix",
-    "typecheck": "tsc",
+    "typecheck": "pnpm codegen && tsc",
     "stylelint": "stylelint --cache --fix --ignore-path .gitignore **/*.css",
     "test": "vitest",
-    "codegen": "graphql-codegen-esm --require dotenv/config --config codegen.yml dotenv_config_path=./.env.local",
-    "prebuild": "pnpm codegen",
-    "prestart": "pnpm codegen",
-    "pretypecheck": "pnpm codegen",
+    "codegen": "graphql-codegen --require dotenv/config --config codegen.yml dotenv_config_path=./.env.local",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -27,6 +24,7 @@
     "@mantine/hooks": "^5.8.3",
     "@togglecorp/fujs": "^1.9.3",
     "@urql/devtools": "^2.0.3",
+    "@urql/exchange-multipart-fetch": "^1.0.1",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -40,7 +38,9 @@
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
     "@graphql-codegen/cli": "2.15.0",
-    "@graphql-codegen/client-preset": "1.2.0",
+    "@graphql-codegen/client-preset": "1.2.1",
+    "@graphql-codegen/introspection": "2.2.1",
+    "@graphql-codegen/schema-ast": "^2.6.0",
     "@graphql-eslint/eslint-plugin": "^3.13.1",
     "@types/node": "^18.11.10",
     "@types/react": "^18.0.17",
