--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,23 @@
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
     "extends": [
         "config:base"
+    ],
+    "packageRules": [
+        {
+            "matchPackagePatterns": ["eslint"],
+            "groupName": "eslint"
+        },
+        {
+            "matchPackagePatterns": ["vite"],
+            "groupName": "vite"
+        },
+        {
+            "matchPackagePatterns": ["pnpm"],
+            "groupName": "pnpm"
+        },
+        {
+            "matchPackagePatterns": ["graphql"],
+            "groupName": "graphql"
+        }
     ]
 }
