--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,8 @@ jobs:
         run: pnpm install
 
       - name: Typecheck
+        env:
+          VITE_GRAPHQL_API_ENDPOINT: "schema.graphql"
         run: pnpm run typecheck
 
   build:
@@ -54,4 +56,6 @@ jobs:
         run: pnpm install
 
       - name: Build
+        env:
+          VITE_GRAPHQL_API_ENDPOINT: "schema.graphql"
         run: pnpm run build
