--- a/package.json
+++ b/package.json
@@ -17,65 +17,65 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@babel/core": ">=7.0.0 <8.0.0",
+    "@babel/core": "^7.20.5",
     "@emotion/react": "^11.10.5",
     "@graphql-typed-document-node/core": "^3.1.1",
-    "@mantine/core": "^5.8.3",
-    "@mantine/hooks": "^5.8.3",
-    "@togglecorp/fujs": "^1.9.3",
+    "@mantine/core": "^5.9.4",
+    "@mantine/hooks": "^5.9.4",
+    "@togglecorp/fujs": "^2.0.0",
     "@urql/devtools": "^2.0.3",
     "@urql/exchange-multipart-fetch": "^1.0.1",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.4.0",
+    "react-router-dom": "^6.4.5",
     "urql": "^3.0.3",
     "vite-plugin-imagemin": "^0.6.1",
-    "vite-plugin-svgr": "^2.2.1"
+    "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
-    "@graphql-codegen/cli": "2.15.0",
-    "@graphql-codegen/client-preset": "1.2.1",
-    "@graphql-codegen/introspection": "2.2.1",
+    "@graphql-codegen/cli": "2.16.1",
+    "@graphql-codegen/client-preset": "1.2.3",
+    "@graphql-codegen/introspection": "2.2.3",
     "@graphql-codegen/schema-ast": "^2.6.0",
     "@graphql-eslint/eslint-plugin": "^3.13.1",
-    "@types/node": "^18.11.10",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
+    "@types/node": "^18.11.14",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.37.0",
-    "@urql/core": "^3.0.5",
-    "@vitejs/plugin-react": "^2.1.0",
-    "autoprefixer": "^10.4.11",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
+    "@urql/core": "^3.1.1",
+    "@vitejs/plugin-react": "^3.0.0",
+    "autoprefixer": "^10.4.13",
     "browserslist": "^4.21.4",
-    "eslint": "^8.23.1",
+    "eslint": "^8.29.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-import-resolver-typescript": "^3.5.1",
+    "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-postcss-modules": "^2.0.0",
-    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.0",
-    "pnpm": "^7.12.1",
-    "postcss": "^8.4.16",
-    "postcss-nested": "^5.0.6",
+    "husky": "^8.0.2",
+    "pnpm": "^7.18.2",
+    "postcss": "^8.4.20",
+    "postcss-nested": "^6.0.0",
     "postcss-normalize": "^10.0.1",
-    "postcss-preset-env": "^7.8.2",
-    "stylelint": "^14.12.0",
+    "postcss-preset-env": "^7.8.3",
+    "stylelint": "^14.16.0",
     "stylelint-config-concentric-order": "^5.1.0",
     "stylelint-config-recommended": "^9.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.3",
-    "vite": "^3.1.0",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.1",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-pwa": "^0.12.8",
-    "vite-tsconfig-paths": "^3.5.0",
-    "vitest": "^0.23.4"
+    "vite-plugin-pwa": "^0.14.0",
+    "vite-tsconfig-paths": "^4.0.2",
+    "vitest": "^0.25.7"
   }
 }
