--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/react": "^11.10.5",
     "@graphql-typed-document-node/core": "^3.1.1",
     "@mantine/core": "^5.9.4",
+    "@mantine/form": "^5.9.4",
     "@mantine/hooks": "^5.9.4",
     "@togglecorp/fujs": "^2.0.0",
     "@urql/devtools": "^2.0.3",
