--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "typescript": "^4.9.4",
     "typescript-plugin-css-modules": "^4.1.1",
     "vite": "^4.0.1",
+    "vite-plugin-checker": "^0.5.6",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-pwa": "^0.14.0",
     "vite-tsconfig-paths": "^4.0.2",
