--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "pnpm codegen && eslint app --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint app --ext .js,.jsx,.ts,.tsx --fix",
     "typecheck": "pnpm codegen && tsc",
-    "stylelint": "stylelint --cache --fix --ignore-path .gitignore **/*.css",
+    "stylelint": "stylelint --cache --ignore-path .gitignore **/*.css",
+    "stylelint:fix": "stylelint --cache --fix --ignore-path .gitignore **/*.css",
     "test": "vitest",
     "codegen": "graphql-codegen --require dotenv/config --config codegen.yml dotenv_config_path=./.env.local",
     "prepare": "husky install"
