--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
+    "react-icons": "4.8.0",
     "react-router-dom": "^6.4.5",
     "urql": "^3.0.3",
     "vite-plugin-imagemin": "^0.6.1",
