--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dive",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "packageManager": "pnpm@7.12.1",
   "scripts": {
@@ -24,6 +24,8 @@
     "@mantine/core": "^5.10.5",
     "@mantine/form": "^5.10.5",
     "@mantine/hooks": "^5.10.5",
+    "@sentry/react": "^7.45.0",
+    "@sentry/tracing": "^7.45.0",
     "@togglecorp/fujs": "^2.0.0",
     "@urql/devtools": "^2.0.3",
     "@urql/exchange-multipart-fetch": "^1.0.1",
