--- a/package.json
+++ b/package.json
@@ -27,16 +27,13 @@
     "@sentry/react": "^7.45.0",
     "@sentry/tracing": "^7.45.0",
     "@togglecorp/fujs": "^2.0.0",
-    "@urql/devtools": "^2.0.3",
     "@urql/exchange-multipart-fetch": "^1.0.1",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "4.8.0",
     "react-router-dom": "^6.9.0",
-    "urql": "^3.0.4",
-    "vite-plugin-imagemin": "^0.6.1",
-    "vite-plugin-svgr": "^2.4.0"
+    "urql": "^3.0.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.5.0",
@@ -52,7 +49,6 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
-    "@urql/core": "^3.2.2",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "browserslist": "^4.21.5",
@@ -80,6 +76,7 @@
     "vite-plugin-checker": "^0.5.6",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-pwa": "^0.14.6",
+    "vite-plugin-svgr": "^2.4.0",
     "vite-tsconfig-paths": "^4.0.7",
     "vitest": "^0.29.7"
   }
